--- a/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/02-status-colors.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/02-status-colors.twig
@@ -1,6 +1,6 @@
 <div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix o-bolt-grid--small">
   {% for colorName, palette in bolt.data.colors.status %}
-    {% include "@bolt/_color-swatch.twig" with {
+    {% include "_color-swatch.twig" with {
       color_swatch: {
         colorName: colorName,
         palette: palette
