initial logo schema

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/logo/00-logo-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/logo/00-logo-docs.twig
@@ -1,4 +1,4 @@
-{#{% set schema = get_data('@bolt-components-logo/logo.schema.yml') %}#}
+{% set schema = get_data('@bolt-components-logo/logo.schema.yml') %}
 {% set readme = source('@bolt-components-logo/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-logo/logo.twig" with {
