--- a/packages/components/bolt-logo/src/logo.twig
+++ b/packages/components/bolt-logo/src/logo.twig
@@ -3,3 +3,7 @@
     logo: logo
   }, with_context = true) }}
 </bolt-logo>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-logo/logo.schema.yml', _self) }}
+{% endif %}
