--- a/apps/pattern-lab--workshop/src/styles/pl.scss
+++ b/apps/pattern-lab--workshop/src/styles/pl.scss
@@ -1,4 +1,6 @@
 // PL only styles
+@import "@bolt/core";
+@import "../_patterns/01-visual-styles/color-palette/_color-swatch";
 @import "*.scss";
 
 bolt-demo {
