--- a/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
@@ -1,10 +1,16 @@
+{#
+A textarea input element
+
+Available variables:
+  - attributes (object) - A Drupal attributes object for the input element.  Of note, it may include the following:
+    - disabled (boolean)
+    - placeholder (string)
+  - value (renderable) - Optional elements to render within the textarea tag.
+#}
+
 {# TODO: Add hasErrors parameter to support server-side invalidation #}
 
 {% set attributes = create_attribute(attributes | default({})) %}
-{% set wrapperAttributes = create_attribute(wrapperAttributes | default({})) %}
 {% set classes = ['c-bolt-input'] %}
-{% set wrapperClasses = ['c-bolt-custom-input'] %}
 
-<div{{ wrapperAttributes.addClass(wrapperClasses) }}>
-  <textarea{{ attributes.addClass(classes) }}>{{ value }}</textarea>
-</div>
+<textarea{{ attributes.addClass(classes) }}>{{ value }}</textarea>
