--- a/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
@@ -6,11 +6,15 @@ Available variables:
     - disabled (boolean)
     - placeholder (string)
   - value (renderable) - Optional elements to render within the textarea tag.
+  - hasErrors (boolean) - whether this textarea has server-side errors.  If true, this will invoke error styling for this
+      field on page load.
 #}
 
-{# TODO: Add hasErrors parameter to support server-side invalidation #}
-
 {% set attributes = create_attribute(attributes | default({})) %}
-{% set classes = ['c-bolt-input'] %}
+{% set _classes = ['c-bolt-input'] %}
 
-<textarea{{ attributes.addClass(classes) }}>{{ value }}</textarea>
+{% if hasErrors %}
+  {% set _classes = _classes|merge(['is-invalid']) %}
+{% endif %}
+
+<textarea{{ attributes.addClass(_classes) }}>{{ value }}</textarea>
