convert existing schema from json to yml

--- a/packages/components/button/src/button.twig
+++ b/packages/components/button/src/button.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
 
 {# Defaults for a vanilla `Button` component #}
 {% set prefix = "c-bolt-" %}
