fix links in PL demos to use yml version of schema

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/05-button-rounded-options.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/05-button-rounded-options.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
 
 {% for rounded in schema.properties.rounded.enum %}
   <p>{{ rounded|capitalize }} Button</p>
