--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/35-button-align-items.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/35-button-align-items.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
 
 {% for align in schema.properties.align.enum %}
   <p>Align: {{ align }}</p>
