--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/25-button-widths.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/25-button-widths.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
 
 {% for width in schema.properties.width.enum %}
   <p>Button Width Variations: {{ width ? width : 'Default' }}</p>
