--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/30-button-tags.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/30-button-tags.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
 
 {% for tag in schema.properties.tag.enum %}
   <p>Button Tag: {{ tag }}</p>
