Renaming Visual Styles to Global

--- a/apps/pattern-lab--workshop/src/styles/pl.scss
+++ b/apps/pattern-lab--workshop/src/styles/pl.scss
@@ -1,6 +1,6 @@
 // PL only styles
 @import "@bolt/core";
-@import "../_patterns/01-visual-styles/color-palette/_color-swatch";
+@import "../_patterns/**/*.scss";
 @import "*.scss";
 
 bolt-demo {
