--- a/apps/pattern-lab--workshop/src/styles/_docs.scss
+++ b/apps/pattern-lab--workshop/src/styles/_docs.scss
@@ -35,28 +35,46 @@
   display: -ms-grid;
   display: grid;
 
-  -ms-grid-rows: auto auto 1fr;
-  grid-template-rows: auto auto 1fr;
+  -ms-grid-rows: bolt-spacing(large) auto auto 1fr bolt-spacing(large);
+  grid-template-rows: bolt-spacing(large) auto auto 1fr bolt-spacing(large);
 
-  -ms-grid-columns: 1fr 80% 20% 1fr;
-  grid-template-columns: 1fr 80% 20% 1fr;
+
+  -ms-grid-columns: 1fr 90% 1fr;
+  grid-template-columns: 1fr 90% 1fr;
+
   max-width: 1440px;
   margin: 0 auto;
 
+  @include respond-to(medium) {
+    -ms-grid-columns: 1fr 17.5% 65% 17.5% 1fr;
+    grid-template-columns: 1fr 17.5% 65% 17.5% 1fr;
+  }
 }
 
 .c-bolt-docs__page-content {
-  grid-column: 2/span 2;
+  grid-column: 2/span 1;
   grid-row: 3/span 1;
   min-width: 0;
-  padding-left: 40px;
-  padding-right: 40px;
+
+  @include respond-to(medium) {
+    grid-row: 3/span 1;
+    grid-column: 3/span 1;
+    @include bolt-padding-left(large);
+    @include bolt-padding-right(large);
+  }
 }
 
 
 .c-bolt-docs__page-nav {
-  grid-row: 3/span 1;
-  grid-column: 3/span 1;
+  grid-row: 2/span 1;
+  grid-column: 2/span 1;
+  text-align: right;
+
+  @include respond-to(medium) {
+    grid-row: 3/span 1;
+    grid-column: 4/span 2;
+    text-align: left;
+  }
 }
 
 * + pre {
